@@ -34,6 +34,7 @@ In alphabetical order (by last name)
 
 * Chris Anderson
 ** Patch to return strings in response to :to_param (in generated controller/view specs)
+** Patch to add --skip-migration option to rspec_resource generator
 * Wilson Bilkovich
 ** lambda {...}.should_change(obj, :message)
 ** ar_subclass.should_have(n).errors_on(:attribute)
